# foro

./: .gitattributes  CLAUDE.md  Cargo.toml  MAINTAIN_PLUGINS.md  README.ja.md  README.md  RELEASE.md  RELEASE_NOTES.md  build.rs  daemon-output-semantics-report.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
benchmark/: run.py  run_result.txt
benchmark/biome-test/: biome.json  dprint.json  manual_cmd.txt  package-lock.json  package.json
benchmark/biome-test/src/: large.tsx  medium.tsx  small.tsx
benchmark/clang-format-test/: large.cpp  small.cpp
benchmark/ruff-test/: manual_cmd.txt  pyproject.toml
benchmark/ruff-test/src/ruff_test/: __init__.py  large.py  main.py  medium.py
src/: app_dir.rs  build_info.rs  bulk_format.rs  cli.rs  config.rs  daemon.rs  default_ignore.txt  format.rs  handle_plugin.rs  install_check.rs  log.rs  main.rs  path_utils.rs  process_utils.rs
src/app_dir/: linux_resolver.rs  macos_resolver.rs  windows_resolver.rs
src/cli/: bulk_format.rs  cache.rs  config.rs  daemon.rs  format.rs  install.rs  internal.rs
src/config/: default_config.json  load.rs  model.rs
src/daemon/: client.rs  client_on_other.rs  client_on_unix.rs  interface.rs  server.rs  server_exec.rs  server_on_other.rs  server_on_unix.rs  startup_lock.rs  uds.rs
src/format/: handle_command.rs
src/handle_plugin/: cache.rs  load.rs  run.rs
src/process_utils/: on_linux.rs  on_macos.rs  on_windows.rs
tests/: cli_bulk_format.rs  cli_daemon.rs  cli_format.rs  cli_install.rs  cli_version.rs  common.rs
tests/fixtures/cli_bulk_format/error_count/: foro.json
tests/fixtures/cli_bulk_format/error_count/input/: main.txt
tests/fixtures/cli_bulk_format/foro_ignore/input/: formatted.rs  ignored.rs
tests/fixtures/cli_bulk_format/foro_ignore_glob/expected/: main.rs
tests/fixtures/cli_bulk_format/no_rule_match/: foro.json
tests/fixtures/cli_bulk_format/no_rule_match/expected/: readme.txt
tests/fixtures/cli_bulk_format/subdirectory/input/sub/: nested.rs
tests/fixtures/cli_format_cpp/basic/: expected.cpp  main.cpp
tests/fixtures/cli_format_cpp/disable/: main.cpp
tests/fixtures/cli_format_cpp/extend_config/: .clang-format
tests/fixtures/cli_format_cpp/extend_config/root/: .clang-format
tests/fixtures/cli_format_cpp/nested_config/nest/: .clang-format
tests/fixtures/cli_format_cpp/nested_config/nest/src/: expected.cpp  main.cpp
tests/fixtures/cli_format_cpp/overwrite_config/: .clang-format
tests/fixtures/cli_format_cpp/overwrite_config/src/: .clang-format  expected.cpp  main.cpp
tests/fixtures/cli_format_cpp/with_config/: .clang-format  expected.cpp  main.cpp
tests/fixtures/cli_format_go/: main.go
tests/fixtures/cli_format_python/: main.py
tests/fixtures/cli_format_python/basic/: expected.py
tests/fixtures/cli_format_python/extend_config/root/: expected.py  main.py  pyproject.toml
tests/fixtures/cli_format_python/ignore/: main.py  pyproject.toml
tests/fixtures/cli_format_python/nested_config/nest/src/: expected.py
tests/fixtures/cli_format_python/overwrite_config/: pyproject.toml
tests/fixtures/cli_format_python/overwrite_config/src/: expected.py
tests/fixtures/cli_format_python/with_config/: expected.py  main.py  pyproject.toml
tests/fixtures/cli_format_rules/: foro.json
tests/fixtures/cli_format_rust/basic/: expected.rs  main.rs
tests/fixtures/cli_format_rust/ignore/: rustfmt.toml
tests/fixtures/cli_format_ts/basic/: expected.ts
tests/fixtures/cli_format_ts/extend_config/root/: biome.json  expected.ts
tests/fixtures/cli_format_ts/ignore/: biome.json  expected.ts
tests/fixtures/cli_format_ts/nested_config/nest/: biome.json
tests/fixtures/cli_format_ts/overwrite_config/: biome.json
tests/fixtures/cli_format_ts/overwrite_config/root/: expected.ts  main.ts
tests/fixtures/cli_format_ts/with_config/: expected.ts
