[package]
name = "foro"
version = "0.1.0"
edition = "2021"

[profile.super-release]
inherits = "release"
opt-level = 3
codegen-units = 1
debug = false
lto = "fat"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive", "string"] }
clap-verbosity-flag = "2.2.1"
env_logger = "0.11.3"
log = "0.4.22"
dirs = "5.0.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.120"
url_serde = "0.2.0"
url = "1.7.2"
urlencoding = "2.1.3"
reqwest = { version = "0.12.7", default-features = false, features = ["rustls-tls", "http2", "blocking"] }
# only the necessary features are extracted to speed up the build process
wasmtime = { version = "24.0.0", default-features = false, features = ["runtime", "gc", "threads", "cranelift"] }
wasmtime-wasi = "24.0.0"
minijinja = "2.2.0"
dialoguer = "0.11.0"
foro-plugin-utils = { git = "https://github.com/nahco314/foro-plugin-utils", version = "0.1.0" }
os_pipe = "1.2.1"
notify = "6.1.1"
libloading = "0.8.5"
sysinfo = "0.31.4"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", features = ["process", "fs", "feature"]}
shell-words = "1.1.0"

[target.'cfg(windows)'.dependencies]
winsplit = "0.1.0"
uds_windows = "1.1.0"
winapi = { version = "0.3", features = ["winbase", "minwindef", "winnt", "processthreadsapi"] }
